--- a/catalog.html
+++ b/catalog.html
@@ -5,24 +5,26 @@
     <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Техномарт Каталог</title>
   </head>
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div class="logo">техномарт</div>
-        <div class="search">Поиск:</div>
-        <div class="bookmarks">Закладки: 0</div>
-        <div class="mart">Корзина: 10</div>
-        <div class="order">Оформить заказ</div>
-        <section>
+  <body class="page">
+    <header class="page-header">
+      <div class="container">
+        <div class="top-row">
+          <div class="logo-top">техномарт<img src="" alt="alt"></div>
+          <div class="search">Поиск:</div>
+          <div class="bookmarks">Закладки:<span>0</span></div>
+          <div class="mart">Корзина:<span>10</span></div>
+          <div class="order">Оформить заказ</div>
+        </div>
+        <div class="middle-row">
           <h2>главные данные</h2>
-          <p>Интернет-магазин</p>
-          <p>строительных материалов</p>
-          <p>и инструментов для ремонта</p><a href="tel:">+7 (812) 555-05-55</a>
+          <p>Интернет-магазин строительных материалов и инструментов для ремонта</p><a href="tel:+78125550555"></a>
           <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="customer.html">Равшан Джамшутович</a>
           <ul>
             <li><a href="">Мои Заказы</a></li>
             <li><a href="">Личный кабинет</a></li>
           </ul>
+        </div>
+        <div class="bottom-row">
           <nav>
             <ul>
               <li><a href="index.html">Главная</a></li>
@@ -34,91 +36,107 @@
               <li><a href="">Контакты</a></li>
             </ul>
           </nav>
-        </section>
-      </header>
-      <main class="main">
+        </div>
+      </div>
+    </header>
+    <main class="content">
+      <div class="container">
         <ul>
-          <li><img src="" alt="home"></li>
-          <li><a href="#">Каталог </a></li>
+          <li><a href="index.html"> <img src="" alt="home"></a></li>
+          <li><a href="">Каталог </a></li>
           <li><a href="">Инструмент</a></li>
           <li><a class="current">Перфораторы</a></li>
         </ul>
-        <h2>Перфораторы</h2>
-        <section>
+        <div class="title">Перфораторы</div>
+        <div class="aside">
           <form action="" method="post">
-            <fieldset>
-              <legend>
-                <div class="choose_filter">
-                  <label for="">Производители:
-                    <input type="checkbox" name="manufacturer">
-                    <label>bosch</label>
-                    <input type="checkbox" name="manufacturer">
-                    <label>интерскол</label>
-                    <input type="checkbox" name="manufacturer">
-                    <label>makita</label>
-                    <input type="checkbox" name="manufacturer">
-                    <label>dewalt</label>
-                    <input type="checkbox" name="manufacturer">
-                    <label>hitachi</label>
-                  </label>
-                </div>
-              </legend>
+            <fieldset class="choose-filter">
+              <legend>Производители:</legend>
+              <p>
+                <input type="checkbox" name="manufacturer">
+                <label>bosch</label>
+              </p>
+              <p>
+                <input type="checkbox" name="manufacturer">
+                <label>интерскол</label>
+              </p>
+              <p>
+                <input type="checkbox" name="manufacturer">
+                <label>makita</label>
+              </p>
+              <p>
+                <input type="checkbox" name="manufacturer">
+                <label>dewalt</label>
+              </p>
+              <p>
+                <input type="checkbox" name="manufacturer">
+                <label>hitachi</label>
+              </p>
             </fieldset>
-            <fieldset>
-              <legend>
-                <div class="choose_filter">
-                  <label for="">питание:
-                    <input type="radio" name="charge">
-                    <label>аккумуляторные</label>
-                    <input type="radio" name="charge">
-                    <label>сетевые</label>
-                  </label>
-                </div>
-              </legend>
+            <fieldset class="choose-filter-2">
+              <legend>питание:</legend>
+              <p>
+                <input type="radio" name="charge">
+                <label>аккумуляторные</label>
+              </p>
+              <p> 
+                <nput type="radio" name="charge"> </nput>
+                <label>сетевые</label>
+              </p>
             </fieldset>
             <button type="submit">Показать</button>
           </form>
-          <ul>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p><a href="">15500 Р.</a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p><a href="">25500 Р.</a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 2000</h3><a href=""></a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p><a href="">15500 Р.</a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p><a href="">25500 Р.</a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 2000</h3><a href=""></a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p><a href="">15500 Р.</a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p><a href="">25500 Р.</a>
-            </li>
-            <li><img src="" alt="">
-              <h3>Перфоратор BOSCH BFG 2000</h3><a href="">12500 Р.</a>
-            </li>
-          </ul>
-        </section>
-        <section></section>
-      </main>
-      <footer class="footer">
-        <div class="footer_top">
-          <div class="footer_logo">Техномарт</div>
+        </div>
+        <div class="goods">
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <p>12500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <p>12500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+          </div>
+          <div class="block"><a href=""><img src="" alt=""></a>
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <p>12500 Р.</p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="top-row">
+          <div class="logo-bottom"> Техномарт</div>
           <ul>
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
@@ -127,8 +145,8 @@
             <li><a href="">Контакты</a></li>
           </ul>
         </div>
-        <div class="footer_middle">
-          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
+        <div class="middle-row">
+          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:+78125550555"> </a>
           <ul> 
             <li><a href="">Материалы</a></li>
             <li><a href="">Техника</a></li>
@@ -136,12 +154,12 @@
             <li><a href="">Спецпредложения</a></li>
           </ul>
         </div>
-        <div class="footer_bottom">
+        <div class="bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
-          <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
+          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru"></a>
           <p>Разработано htmlacademy.ru</p>
         </div>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
