--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Техномарт Главная</title>
   </head>
-  <body>
-    <div class="wrapper">
-      <header class="header">
-        <div class="logo">техномарт</div>
-        <div class="search">Поиск:</div>
-        <div class="bookmarks">Закладки: 0</div>
-        <div class="mart">Корзина: 0</div>
-        <div class="order">Оформить заказ</div>
-        <section>
+  <body class="page">
+    <header class="page-header">
+      <div class="container">
+        <div class="top-row">
+          <div class="logo-top">техномарт<img src="" alt="alt"></div>
+          <div class="search">Поиск:</div>
+          <div class="bookmarks">Закладки:<span>0</span></div>
+          <div class="mart">Корзина:<span>0</span></div>
+          <div class="order">Оформить заказ</div>
+        </div>
+        <div class="middle-row">
           <h2>главные данные</h2>
-          <p>Интернет-магазин</p>
-          <p>строительных материалов</p>
-          <p>и инструментов для ремонта</p><a href="tel:">+7 (812) 555-05-55</a>
+          <p>Интернет-магазин строительных материалов и инструментов для ремонта</p><a href="tel:+78125550555"></a>
           <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="login.html">Войти</a><a href="registration.html">Регистриция</a>
+        </div>
+        <div class="bottom-row">
           <nav>
             <ul>
               <li><a class="current">Главная</a></li>
@@ -30,31 +32,31 @@
               <li><a href="">Контакты</a></li>
             </ul>
           </nav>
-        </section>
-      </header>
-      <main>
-        <section>
-          <h2>Компания "Техномарт"</h2>
-          <p>Настоящий мужской шопинг начинается здесь! огромный выбор товаров для ремонта и</p>
-          <p>строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
-          <p>Мы можемдоставить ваш товар в самые отдельные точки России!</p>
-          <p>Техномарт работает со многими ранспортными компаниями:</p>
-          <ul>
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
-          </ul><a href="about.html">Подробнее о компании </a>
-        </section>
-        <section>
-          <h2>Контакты</h2>
-          <p>можете выбрать товар сами, заехав в наш офис:</p>
-          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe>
-          <button type="submit">Заблудились? Напишите нам!</button>
-        </section>
-      </main>
-      <footer>
-        <div class="footer_top">
-          <div class="footer_logo">Техномарт</div>
+        </div>
+      </div>
+    </header>
+    <main class="content">
+      <div class="company">
+        <h2>Компания "Техномарт"</h2>
+        <p>Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
+        <p>Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul><a href="about.html">Подробнее о компании </a>
+      </div>
+      <div class="contacts">
+        <h2>Контакты</h2>
+        <p>можете выбрать товар сами, заехав в наш офис:</p>
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe>
+        <button type="submit">Заблудились? Напишите нам!</button>
+      </div>
+    </main>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="top-row">
+          <div class="logo-bottom">Техномарт</div>
           <ul>
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
@@ -63,8 +65,8 @@
             <li><a href="">Контакты</a></li>
           </ul>
         </div>
-        <div class="footer_middle">
-          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
+        <div class="middle-row">
+          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:+78125550555"></a>
           <ul> 
             <li><a href="">Материалы</a></li>
             <li><a href="">Техника</a></li>
@@ -72,12 +74,12 @@
             <li><a href="">Спецпредложения</a></li>
           </ul>
         </div>
-        <div class="footer_bottom">
+        <div class="bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
-          <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
+          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru"> </a>
           <p>Разработано htmlacademy.ru</p>
         </div>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
