--- a/catalog.html
+++ b/catalog.html
@@ -11,9 +11,9 @@
         <div class="top-row">
           <div class="logo-top"><img src="" alt="alt"></div>
           <div class="search">
-            <form action="" method="method">
+            <form action="search.html" method="get">
               <input type="text" placeholder="Поиск:">
-              <button></button>
+              <button type="submit"></button>
             </form>
           </div>
           <div class="bookmarks">Закладки:<span>0</span></div>
@@ -21,29 +21,29 @@
           <div class="order">Оформить заказ</div>
         </div>
         <div class="middle-row">
-          <div class="middle-row-text">
+          <div class="slogan">
             <h2>главные данные</h2>
             <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
           </div>
-          <div class="middle-row-address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="middle-row-authorization"><a href="customer.html">Равшан Джамшутович</a>
+          <div class="authorization"><a href="customer.html">Равшан Джамшутович</a>
             <ul>
               <li><a href="">Мои Заказы</a></li>
               <li><a href="">Личный кабинет</a></li>
             </ul>
           </div>
         </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="">Компания</a></li>
-            <li><a class="current">Каталог</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Спецпредложения</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item"><a class="navigation-link" href="index.html">Главная</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Компания</a></li>
+            <li class="navigation-item"><a class="current">Каталог</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Новости</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Спецпредложения</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Доставка</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -51,58 +51,63 @@
     <main class="page-content">
       <div class="container">
         <ul class="breadcrumbs">
-          <li><a href="index.html"> <img src="" alt="home"></a></li>
-          <li><a href="">Каталог </a></li>
-          <li><a href="">Инструмент</a></li>
-          <li><a class="current">Перфораторы</a></li>
+          <li class="breadcrumbs-item-home"><a href="index.html"> <img src="" alt="home"></a></li>
+          <li class="breadcrumbs-item"><a href="">Каталог </a></li>
+          <li class="breadcrumbs-item"><a href="">Инструмент</a></li>
+          <li class="breadcrumbs-item"><a class="current">Перфораторы</a></li>
         </ul>
         <h1>Перфораторы</h1>
         <aside class="aside">
           <p class="filter">ФИЛЬТР:</p>
-          <h3>ЦЕНА:</h3>
-          <div class="choose-price">
-            <label for="rating"></label>
-            <input id="rate" name="rate" min="0" max="30000" step="500" value="30000">
-          </div>
           <form action="" method="get">
-            <fieldset class="choose-filter">
+            <fieldset class="choose-filter-0">
+              <legend>цена:</legend>
+              <div class="choose-price">
+                <label for="rating"></label>
+                <input id="rate" name="rate" min="0" max="30000" step="500" value="30000">
+              </div>
+              <div class="price-number"></div>
+              <div class="line"></div>
+              <div class="price-number"></div>
+            </fieldset>
+            <fieldset class="choose-filter-1">
               <legend>Производители:</legend>
               <p>
-                <input type="checkbox" name="bosch" id="">
-                <label for="">bosch</label>
+                <input type="checkbox" name="bosch" id="bosch">
+                <label for="bosch">bosch</label>
               </p>
               <p>
-                <input type="checkbox" name="interscol">
-                <label>интерскол</label>
+                <input type="checkbox" name="interscol" id="interscol">
+                <label for="">интерскол</label>
               </p>
               <p>
-                <input type="checkbox" name="makita">
-                <label>makita</label>
+                <input type="checkbox" name="makita" id="makita">
+                <label for="makita">makita</label>
               </p>
               <p>
-                <input type="checkbox" name="dewalt">
-                <label>dewalt</label>
+                <input type="checkbox" name="dewalt" id="dewalt">
+                <label for="dewalt">dewalt</label>
               </p>
               <p>
-                <input type="checkbox" name="hitachi">
-                <label>hitachi</label>
+                <input type="checkbox" name="hitachi" id="hitachi">
+                <label for="hitachi">hitachi</label>
               </p>
             </fieldset>
             <fieldset class="choose-filter-2">
               <legend>питание:</legend>
               <p>
-                <input type="radio" name="charge" value="">
-                <label>аккумуляторные</label>
+                <input type="radio" name="charge" value="accum" id="accum">
+                <label for="accum">аккумуляторные</label>
               </p>
               <p> 
-                <input type="radio" name="charge" value="">
-                <label>сетевые</label>
+                <input type="radio" name="charge" value="network" id="network">
+                <label for="network">сетевые</label>
               </p>
             </fieldset>
             <button type="submit">Показать</button>
           </form>
         </aside>
-        <div class="goods">
+        <section class="goods catalog">
           <div class="goods-item"><a href=""><img src="" alt=""></a>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
             <s class="old-price">22500 Р.</s>
@@ -145,16 +150,16 @@
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
-          <div class="goods-item-navigation">
-            <ul>
-              <li><a href="">1</a></li>
-              <li><a href="">2</a></li>
-              <li><a href="">3</a></li>
-              <li><a href="">Слудующая</a></li>
+          <div class="pager">
+            <ul class="pager-list">
+              <li class="pager-item"><a class="current">1</a></li>
+              <li class="pager-item"><a href="">2</a></li>
+              <li class="pager-item"><a href="">3</a></li>
+              <li class="pager-item"><a href="">Слудующая</a></li>
             </ul>
           </div>
-        </div>
-        <div class="page-content-end">
+        </section>
+        <div class="about-puncher">
           <h3>пара слов о перфораторах</h3>
           <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
         </div>
@@ -164,7 +169,7 @@
       <div class="container">
         <div class="top-row">
           <div class="logo-bottom"><img src="" alt="alt"></div>
-          <ul>
+          <ul class="footer-nav">
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
@@ -174,7 +179,7 @@
         </div>
         <div class="middle-row">
           <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-          <ul> 
+          <ul class="footer-category">
             <li><a href="">Материалы</a></li>
             <li><a href="">Техника</a></li>
             <li><a href="">Инструмент</a></li>
@@ -183,7 +188,7 @@
         </div>
         <div class="bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
-          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss">Разработано htmlacademy.ru</a>
+          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">Разработано htmlacademy.ru</a>
         </div>
       </div>
     </footer>
