--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Техномарт Главная</title>
   </head>
@@ -12,156 +11,148 @@
         <div class="top-row">
           <div class="logo-top"><img src="" alt="alt"></div>
           <div class="search">
-            <form action="" method="method">
+            <form action="search.html" method="get">
               <input type="text" placeholder="Поиск:">
-              <button></button>
+              <button type="submit"></button>
             </form>
           </div>
           <div class="bookmarks">Закладки:<span>0</span></div>
-          <div class="mart">Корзина:<span>0</span></div>
+          <div class="cart">Корзина:<span>0</span></div>
           <div class="order">Оформить заказ</div>
         </div>
         <div class="middle-row">
-          <div class="middle-row-text">
+          <div class="slogan">
             <h2>главные данные</h2>
             <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
           </div>
-          <div class="middle-row-address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="middle-row-authorization"><a href="login.html">Войти</a><a href="registration.html">Регистриция</a></div>
+          <div class="authorization"><a href="login.html">Войти</a><a href="registration.html">Регистриция</a></div>
         </div>
-        <nav>
-          <ul>
-            <li><a class="current">Главная</a></li>
-            <li><a href="">Компания</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Спецпредложения</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item"><a class="current">Главная</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Компания</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="catalog.html">Каталог</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Новости</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Спецпредложения</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Доставка</a></li>
+            <li class="navigation-item"><a class="navigation-link" href="">Контакты</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="content">
-      <div class="content-topics">
-        <div class="topic-item">
-          <h3></h3><a href=""></a><img src="" alt="">
-        </div>
-        <div class="topic-item">
-          <h3></h3><a href=""></a><img src="" alt="">
-        </div>
-        <div class="topic-item">
-          <h3></h3><a href=""></a><img src="" alt="">
-        </div>
-        <div class="slider">
-          <input type="radio" name="respond" id="desktop" checked>
-          <article id="slide">
-            <input type="radio" name="slide" id="switch0" checked>
-            <input type="radio" name="slide" id="switch1">
-            <div id="slides">
-              <div id="overflow">
-                <div class="image">
-                  <article>
-                    <div class="topic-item-slide">
-                      <h3>Перфораторы</h3>
-                      <p>Настоящие мужские игрушки</p><a href="catalog.html"></a><img src="" alt="">
-                    </div>
-                  </article>
-                  <article>
-                    <div class="topic-item-slide">
-                      <h3>Дрели</h3>
-                      <p>Соседям на радость!</p><a href="catalog.html"></a><img src="" alt="">
-                    </div>
-                  </article>
-                </div>
-              </div>
+      <section class="categories">
+        <div class="left-category">
+          <div class="item material">
+            <h3></h3><a href=""></a>
+          </div>
+          <div class="item tool">
+            <h3></h3><a href=""></a>
+          </div>
+          <div class="item slider">
+            <div class="slider-item">
+              <h3>Перфораторы</h3>
+              <p>Настоящие мужские игрушки</p><a href="catalog.html"></a>
             </div>
-            <div id="controls">
-              <label for="switch0"></label>
-              <label for="switch1"></label>
+            <div class="slider-item">
+              <h3>Дрели</h3>
+              <p>Соседям на радость!</p><a href="catalog.html"></a>
             </div>
-            <div id="active">
-              <label for="switch0"></label>
-              <label for="switch1"></label>
-            </div>
-          </article>
+            <div class="controls"></div>
+            <button></button>
+            <button></button>
+          </div>
         </div>
-        <div class="topic-item">
-          <h3></h3><a href=""></a><img src="" alt="">
+        <div class="right-category">
+          <div class="item technic">
+            <h3></h3><a href=""></a>
+          </div>
+          <div class="item sale">
+            <h3></h3><a href=""></a>
+          </div>
+          <div class="item delivery">
+            <h3></h3><a href=""></a>
+          </div>
         </div>
-      </div>
-      <div class="content-products">
-        <div class="popular-goods">
+      </section>
+      <section class="popular-products">
+        <header class="popular-goods">
           <h3>Популярные товары:</h3><a href="">все популярные товары</a>
-        </div>
+        </header>
         <div class="goods">
           <div class="goods-item"><a href=""><img src="" alt=""></a>
-            <h3>Перфоратор BOSCH BFG 9000</h3>
-            <p>32500 Р.</p>
-            <p>25500 Р.</p>
+            <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
+            <s class="old-price">32500 Р.</s>
+            <p class="price">25500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="" alt=""></a>
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p>22500 Р.</p>
-            <p>15500 Р.</p>
+            <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+            <s class="old-price">22500 Р.</s>
+            <p class="price">15500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="" alt=""></a>
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
-            <p>25500 Р.</p>
+            <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+            <s class="old-price">30500 Р.</s>
+            <p class="price">25500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="" alt=""></a>
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <p>12500 Р.</p>
+            <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+            <p class="price">12500 Р.</p>
           </div>
         </div>
         <div class="popular-manufacturer">
           <h3>Популярные Производители:</h3><a href="">все производители</a>
         </div>
         <div class="manufacturers">
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
-          <div class="manufacturer-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
+          <div class="manufacturers-item"><a href=""><img src="" alt=""></a></div>
         </div>
-      </div>
+      </section>
       <div class="content-services">
         <div class="service">
           <h3>Сервисы</h3>
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-          <div class="service-items-list">
-            <ul class="service-list">
-              <li class="service-item1"></li><a href="">Доставка</a>
-              <li class="service-item2">Гарантия</li>
-              <li class="service-item3">Кредит</li>
+          <div class="wrapper">
+            <ul class="service-tab-nav">
+              <li class="service-tab-item" data-name="1"></li><a href="">Доставка</a>
+              <li class="service-tab-item" data-name="2">Гарантия</li>
+              <li class="service-tab-item" data-name="3">Кредит</li>
             </ul>
+            <div class="service-tab-content">
+              <div class="service-tab-item">
+                <h3>Доставка</h3>
+                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p><img src="" alt="">
+              </div>
+              <div class="service-tab-item">
+                <h3>Гарантия</h3>
+                <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p><img src="" alt="">
+              </div>
+              <div class="service-tab-item">
+                <h3>Кредит</h3>
+                <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p><a href="">отправить заявку</a><img src="" alt="">
+              </div>
+            </div>
           </div>
-          <div class="service-items-description1"></div>
-          <h3>Доставка</h3>
-          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p><img src="" alt="">
-          <div class="service-items-description2"></div>
-          <h3>Гарантия</h3>
-          <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p><img src="" alt="">
-          <div class="service-items-description3"></div>
-          <h3>Кредит</h3>
-          <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p><a href="">ОТПРАВИТЬ ЗАЯВКУ</a><img src="" alt="">
         </div>
       </div>
       <div class="content-about">
         <div class="company">
           <h2>Компания "Техномарт"</h2>
-          <p>Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
-          <p>Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
-          <ul>
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
+          <p class="company-text">Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
+          <p class="company-text">Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
+          <ul class="partners">
+            <li class="partner">Деловые линии</li>
+            <li class="partner">Автотрейдинг</li>
+            <li class="partner">ЖелДорЭкспедиция</li>
           </ul><a href="about.html">Подробнее о компании </a>
         </div>
         <div class="contacts">
@@ -175,7 +166,7 @@
       <div class="container">
         <div class="top-row">
           <div class="logo-bottom"><img src="" alt="alt"></div>
-          <ul class="link1">
+          <ul class="footer-nav">
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
@@ -185,7 +176,7 @@
         </div>
         <div class="middle-row">
           <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-          <ul class="link2">
+          <ul class="footer-category">
             <li><a href="">Материалы</a></li>
             <li><a href="">Техника</a></li>
             <li><a href="">Инструмент</a></li>
@@ -194,7 +185,7 @@
         </div>
         <div class="bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
-          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss">Разработано htmlacademy.ru</a>
+          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">Разработано htmlacademy.ru</a>
         </div>
       </div>
     </footer>
